force-app/main/default/objects/Charket__WeChatTranscript__c/Charket__WeChatTranscript__c.object-meta.xml
<CustomObject>
    <label>WeChat Transcript</label>
    <nameField>
        <displayFormat>WT-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>