force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__AgentAssignedTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__AgentAssignedTime__c</fullName>
    <label>Agent Assigned Time</label>
    <type>DateTime</type>
</CustomField>