force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__EmailNotifiedTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__EmailNotifiedTime__c</fullName>
    <label>Email Notified Time</label>
    <type>DateTime</type>
</CustomField>