force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__EndTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>