force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__FollowerEventCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__FollowerEventCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Follower Event Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>