force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__FollowerMessageCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__FollowerMessageCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Follower Message Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>