force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__FollowerMessageRollupCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__FollowerMessageRollupCount__c</fullName>
    <label>Follower Message Rollup Count</label>
    <summaryFilterItems>
        <field>Charket__WeChatTranscriptItem__c.Charket__SendBy__c</field>
        <operation>equals</operation>
        <value>Follower</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Charket__WeChatTranscriptItem__c.Charket__Type__c</field>
        <operation>equals</operation>
        <value>TEXT, IMAGE, VOICE, VIDEO, MUSIC, NEWS, SHORTVIDEO, LOCATION, LINK</value>
    </summaryFilterItems>
    <summaryForeignKey>Charket__WeChatTranscriptItem__c.Charket__WeChatTranscript__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>