force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__HasMobileNotifiedMessages__c.field-meta.xml
<CustomField>
    <fullName>Charket__HasMobileNotifiedMessages__c</fullName>
    <formula>AND(
  Charket__UnreadRollupCount__c &gt; 0,
  AND(
     OR(
        ISBLANK(Charket__MobileNotifiedTime__c),
        Charket__LastFollowerMessageTime__c &gt; Charket__MobileNotifiedTime__c
     ),
     Charket__WeChatAgent__r.Charket__IsMobileNotificationsEnabled__c 
  ),
  OR(
     OR(
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDEndTime__c),
        ISBLANK(Charket__WeChatAgent__r.Charket__DNDStartTime__c),
        !Charket__WeChatAgent__r.Charket__IsDoNotDisturbEnabled__c
     ),
     IF(
       AND(Charket__WeChatAgent__r.Charket__DNDEndTime__c != null, Charket__WeChatAgent__r.Charket__DNDEndTime__c != null),
       IF(
          VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
            Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))
          &gt;  VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
            Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2))

          ),
          OR(
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &lt;
              VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2) + &apos;.&apos; + RIGHT(
                 Charket__WeChatAgent__r.Charket__DNDStartTime__c , 2)),
              VALUE(MID(TEXT(NOW()), 12,2) + &apos;.&apos; + MID(TEXT(NOW()), 15,2)) &gt;
                 (VALUE(LEFT( Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2) + &apos;.&apos; + RIGHT(
                    Charket__WeChatAgent__r.Charket__DNDEndTime__c , 2)) + 1)
          )
       ),
       true
     )
  )
)</formula>
    <label>Has Mobile Notified Messages</label>
    <type>Checkbox</type>
</CustomField>