force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsClosed__c</fullName>
    <formula>if(ISPICKVAL(Charket__Status__c, &apos;Completed&apos;)||ISPICKVAL(Charket__Status__c, &apos;Missed&apos;)||ISPICKVAL(Charket__Status__c, &apos;Blocked&apos;), true, false)</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>