force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__MaxResponseTimeFollower__c.field-meta.xml
<CustomField>
    <fullName>Charket__MaxResponseTimeFollower__c</fullName>
    <label>Follower Max Response Time (Seconds)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>