force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__RequestTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__RequestTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Time</label>
    <type>DateTime</type>
</CustomField>