force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__StartedBy__c.field-meta.xml
<CustomField>
    <fullName>Charket__StartedBy__c</fullName>
    <description>The way the chat was started: by the agent or the follower.</description>
    <label>Started By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Follower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>