force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__UnreadRollupCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__UnreadRollupCount__c</fullName>
    <label>Unread Count</label>
    <summaryFilterItems>
        <field>Charket__WeChatTranscriptItem__c.Charket__ReadTime__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Charket__WeChatTranscriptItem__c.Charket__SendBy__c</field>
        <operation>equals</operation>
        <value>Follower</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Charket__WeChatTranscriptItem__c.Charket__IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Charket__WeChatTranscriptItem__c.Charket__WeChatTranscript__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>