force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__WaitTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__WaitTime__c</fullName>
    <formula>IF(ISPICKVAL(Charket__StartedBy__c,&apos;Agent&apos;), null, (Charket__StartTime__c - CreatedDate) * 24 * 60 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wait Time (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>