force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__WeChatAgent__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WeChat Agent</label>
    <referenceTo>Charket__WeChatAgent__c</referenceTo>
    <relationshipLabel>WeChat Transcripts</relationshipLabel>
    <relationshipName>WeChatTranscripts</relationshipName>
    <type>Lookup</type>
</CustomField>