force-app/main/default/objects/Charket__WeChatTranscript__c/fields/Charket__WeChatFollower__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatFollower__c</fullName>
    <label>WeChat Follower</label>
    <referenceTo>Charket__WeChatFollower__c</referenceTo>
    <relationshipLabel>WeChat Transcripts</relationshipLabel>
    <relationshipName>WeChatTranscripts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>