force-app/main/default/objects/Charket__WeChatTranscript__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>